# PaddleSlim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CI_test  CI_test.txt  README.md  README_cn.md  README_en.md  a  aa  aaa  image_classification_nas_quick_start.ipynb  requirements.txt  setup.py  test.txt  test_ci.txt  test_xly.txt
demo/: CMakeLists.txt  imagenet.py  imagenet_reader.py  optimizer.py  sa_nas_mobilenetv2_cifar10.py  thread_sample.cc  utility.py
demo/DML/: README.md  cifar100_reader.py  dml_mobilenetv1_pytorch_quickstart.ipynb  dml_mobilenetv1_pytorch_quickstart.md  dml_mobilenetv1_pytorch_quickstart.py  dml_train.py
demo/analysis/: latency_predictor.py
demo/analysis/train_predictor/: augment.py  readme.txt  rk3288_threads_4_power_mode_0.pkl  sample_data.py  train.py  utility.py
demo/auto-compression/: README.md  demo_coco.py  demo_glue.py  demo_imagenet.py  demo_seg.py  demo_yolofastest.py  run_gelu.sh  run_imagenet.sh
demo/auto-compression/detection/: README.md  run_main.py
demo/auto-compression/pp-humanseg/: README.md  demo_seg.py
demo/auto_compression/: README.md  demo_glue.py  demo_imagenet.py  hyperparameter_tutorial.md
demo/auto_compression/detection/: README.md  eval.py  infer.py  keypoint_utils.py  post_process.py  run.py  run_tinypose.py
demo/auto_compression/image_classification/: README.md  eval.py  infer.py  postprocess.py  preprocess.py  run.py  run.sh  run_tf.sh  tf_imagenet_reader.py
demo/auto_compression/nlp/: README.md  run.py  run.sh
demo/auto_compression/pp-humanseg/: run.py
demo/auto_compression/pytorch-huggingface/: README.md  infer.py  run.sh
demo/auto_compression/pytorch_huggingface/: README.md  infer.py  run.py  run.sh
demo/auto_compression/pytorch_yolov5/: README.md  eval.py  paddle_trt_infer.py  post_process.py  run.py
demo/auto_compression/semantic_segmentation/: README.md  run.py
demo/auto_compression/tensorflow_mobilenet/: README.md  eval.py  imagenet_reader.py
demo/auto_prune/: README.md  train.py  train_finetune.py  train_iterator.py
demo/bert/: offline_dist.py  run.sh  search_bert.py  train_cell_base.py  train_distill.py  train_search.py  train_student.py  train_teacher.py
demo/bert_dist_bert/: train_cell_base.py
demo/conv_mnli/: data  run.sh  train.py
demo/conv_mnli/model/: bert.py  cls.py  mobilenet_v1.py  transformer_encoder.py
demo/darts/: README.md  genotypes.py  model.py  model_search.py  operations.py  reader.py  search.py  train.py  train_imagenet.py  visualize.py
demo/deep_mutual_learning/: README.md  cifar100_reader.py  dml_train.py
demo/detection/: README.md  README_en.md
demo/distill_pruning/: README.md  train.py
demo/distillation/: README.md  distill.py  distillation_demo.py  ex.sh  image_classification_distillation_tutorial.ipynb  train.py
demo/distillation_after_pruning/: README.md  distill.py  distill.sh
demo/distillation_and_pruning/: train.py  train.sh
demo/dygraph/mobilenetv1/: classification_pruning.ipynb  self-defined pruning method.ipynb
demo/dygraph/post_quant/: README.md  eval.py  mobilenet_v3.py  ptq.py
demo/dygraph/pruning/: README.md  eval.py  export_model.py  filter_pruning.md  fpgm_mobilenetv1_f-50_train.sh  fpgm_mobilenetv2_f-50_train.sh  fpgm_resnet34_f-42_train.sh  imagenet.py  self_defined_filter_pruning.md  train.py
demo/dygraph/quant/: README.md  mobilenet_v3.py  optimizer.py  train.py
demo/dygraph/unstructured_pruning/: README.md  evaluate.py  evaluate_cifar10.sh  evaluate_imagenet.sh  train.py  train_cifar10.sh  train_imagenet.sh  train_imagenet_cpu_base.sh  train_imagenet_dist_base.sh  (+3 more)
demo/gan_compression/: README_cn.md  export.py  finetune.sh  gan_compression.py  get_real_stat.py  run.sh  search.py  select_arch.py  test.py
demo/gpnas/: CVPR2021_NAS_competition_gpnas_demo.py  README.md
demo/mkldnn_quant/: CMakeLists.txt  README.md  README_en.md  run.sh  run_bk.sh  run_dummy.sh  run_impl.sh  sample_tester.cc  sample_tester.py  sample_tester_fake_data.cc  thread_sample.cc
demo/models/: __init__.py  fast_scnn.py  mobilenet.py  mobilenet_v2.py  mobilenet_v3.py  pvanet.py  resnet.py  resnet_vd.py  slimfacenet.py
demo/nas/: README.md  block_sa_nas_mobilenetv2.py  block_sa_nas_mobilenetv2_cifar10.py  darts_cifar10_reader.py  darts_nas.py  image_classification_nas_quick_start.ipynb  parl_nas_mobilenetv2.py  rl_nas_mobilenetv2.py  sa_nas_mobilenetv2.py  sa_nas_mobilenetv2_cifar10.py  sanas_darts_space.py  search_space_doc.md
demo/ocr/: README.md
demo/once_for_all/: reader.py  start.sh  train.py
demo/one_shot/: ofa_train.py  train.py
demo/pantheon/: README.md  run_student.py  run_teacher1.py  run_teacher2.py  utils.py
demo/prune/: README.md  REAME.md  eval.py  fpgm_mobilenetv1_f-50_train.sh  fpgm_mobilenetv2_f-50_train.sh  fpgm_resnet34_f-42.sh  fpgm_resnet34_f-42_train.sh  fpgm_resnet34_f-50_train.sh  image_classification_pruning_quick_start.ipynb  train.py
demo/quant/: README.md  basic.py  my_task_distill.py  run_fp.sh  train.py
demo/sensitive/: image_classification_sensitivity_analysis.ipynb  run.sh  train.py
demo/sensitive_prune/: greedy_prune.py  prune.py  train.py
demo/slimfacenet/: README.md  eval_infer_model.py  lfw_eval.py  slim_eval.sh  slim_quant.sh  slim_train.sh  train_eval.py
demo/source-free/: README.md  asp_demo.py  ptq_demo.py  ptq_demo_bert.py  qat_demo.py  qat_demo_bert.py
demo/unstructured_prune/: GMP.py  README.md  README_GMP.md  evaluate.py  evaluate_imagenet.sh  evaluate_mnist.sh  prune_cifar100.sh  train.py  train_imagenet.sh  train_imagenet_cpu_base.sh  train_imagenet_dist.sh  train_imagenet_dist_base.sh  train_imagenet_dist_gmp.sh  train_imagenet_singlegpu_base.sh  train_imagenet_singlegpu_gmp.sh  train_mnist.sh  train_parameters.py  train_parameters_cifar.py  train_parameters_easy.py
demo/unstructured_pruning/: README-dygraph.md  README-stgraph.md  README.md  train-dygraph.py  train-stgraph.py  train.py  unstructure_pruner.py  unstructure_pruner_dygraph.py  unstructure_pruner_stgraph.py
demo/unstructured_pruning_ratio/: README.md  train.py  unstructure_pruner.py
(+1386 files in other folders)
